# react-native-readium

./: .editorconfig  .eslintrc.js  .gitignore  .prettierignore  .yarnrc.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dita.d.ts  nitro.json  package.json  react-native-readium.podspec  readium-nitro-upgrade-plan.md  tsconfig.build.json  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/reactnativereadium/: HybridReadiumView.kt  ReadiumPackage.kt  ReadiumView.kt  ReadiumViewManager.kt
android/src/main/java/com/reactnativereadium/epub/: UserSettings.kt
android/src/main/java/com/reactnativereadium/preferences/: PreferencesManager.kt  UserPreferences.kt
android/src/main/java/com/reactnativereadium/reader/: AudioReaderFragment.kt  BaseReaderFragment.kt  EpubReaderFragment.kt  ImageReaderFragment.kt  PdfReaderFragment.kt  PositionLabelManager.kt  ReaderService.kt  ReaderViewModel.kt  VisualReaderFragment.kt
android/src/main/res/layout/: fragment_bookshelf.xml  fragment_catalog.xml  fragment_catalog_feed_list.xml  fragment_fxllayout_double.xml  fragment_fxllayout_single.xml  fragment_reader.xml  item_group_view.xml  my_fragment.xml  viewpager_fragment_epub.xml
android/src/main/res/menu/: menu_epub.xml  menu_reader.xml
android/src/main/res/navigation/: navigation.xml
android/src/main/res/values/: strings.xml
android/src/main/res/xml/: network_security_config.xml
(+293 files in other folders)
